//==========================================================================
//
// History file for EvtGen
//
//===========================================================================

31st January 2013 John Back
     Added the ability to read in Pythia 8 commands in ascii decay files
     in EvtDecayTable::readDecayFile. They can be set using the syntax:
     "PythiaTypeParam module:variable=value", where Type = Generic, Alias or
     Both for specifying whether the parameter is for the generic or alias
     Pythia decay engines (or both). The 2nd argument must not contain any
     spaces. Fixed the list of commands strings being used in the 
     EvtPythiaEngine class (i.e. Pythia parameters that can be set via decay
     files).

31st January 2013 Daniel Craik
     Added named parameters to various decay models.

30th January 2013 John Back
     Fixed some of the parameter arguments used in the EvtSVSCPiso model.

24th January 2013 John Back
     Set the Photos++ and Tauola++ models to use the EvtGen random number 
     engine when useEvtGenRandom is set to true in the EvtExternalGenList 
     constructor.

23rd January 2013 John Back
     Added EvtGenExternal/EvtPythiaRandom to allow the use of the EvtGen
     random number engine to also be used for the random engine for Pythia 8.
     Added a boolean (useEvtGenRandom, default = true) within the 
     EvtExternalGenList constructor to use this feature.

18th December 2012 John Back
     Corrected some wrong daughter ordering assignments for decay modes 5 and
     12 in EvtDDalitz. Updated validation/DalitzDecays.xml to also contain
     D decay mode 12, as well as various modes that may use K_S0 and K_L0. 
     Added validation/genDDalitzModes.sh and updated 
     validation/compareDalitz.C to do a complete comparison of the D Dalitz 
     modes with the xml versions.

11th December 2012 Daniel Craik
     Updated the Xml parser to support named model parameters. Updated the 