@@ -58,10 +58,13 @@ EvtPhotosEngine::EvtPhotosEngine(std::string photonType, bool useEvtGenRandom) {
   }
 
   Photospp::Photos::initialize();
-  // Set minimum photon energy (50keV at 1 GeV scale)
-  Photospp::Photos::setInfraredCutOff(50.0e-6);
+
+  // Set minimum photon energy (0.1 keV at 1 GeV scale)
+  Photospp::Photos::setInfraredCutOff(1.0e-7);
   // Increase the maximum possible value of the interference weight
-  Photospp::Photos::maxWtInterference(4.0); // 2^n, where n = number of charges (+,-)
+  Photospp::Photos::maxWtInterference(64.0); // 2^n, where n = number of charges (+,-)
+  Photospp::Photos::setInterference(true);
+  Photospp::Photos::setExponentiation(true);
 
   _initialised = false;
 
